Fix dashboard layout alignment

--- a/src/app/(main)/dashboard/layout.module.scss
+++ b/src/app/(main)/dashboard/layout.module.scss
@@ -7,7 +7,7 @@
 .container {
   position: relative;
   display: flex;
-  gap: 60px;
+  gap: 35px;
   overflow: hidden;
   flex-grow: 1;
 }
